--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 header{
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff;
-    border-color: #cccccc
+    border-bottom: solid 1px #cccccc;
+    max-width: 100%;
+    height: 77px;
+    margin: 0px;
 
 }
 
 H1 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
     color: #ffffff;
     background-color: #4aaaa5;
     padding: 20px;
@@ -14,40 +16,72 @@ H1 {
     border-color:#cccccc;
     border-style: solid;
     float: left;
+    margin: 0px 0px 0px 250px;
 }
 
-H2{
+
+.nav{
+    
     font-family: 'Georgia', Times, Times New Roman, serif;
-    color: #4aaaa5;
-    border-bottom: 2px solid #dddddd; 
-    padding-bottom: 20px;
+    color: #777777;
+    text-align: center;
+    margin-top: 10px;
+    padding: 0;
+
+}
+
+.nav li{
+    display: inline-block;
+    padding: 10px;
+}
+
+.nav a{
+    color: #777777;
+    text-decoration: none;
+}
+
+
+.wrapper{
+    margin: 30px 250px;
+    max-width: 50%;
+    padding-right: 10px;
+    padding-left: 10px;
+    border: 1px solid gray;
+    background-color: #ffffff;
     clear: both;
     overflow: auto;
 
+}
+
+H2{
+    
+    color: #4aaaa5;
+    border-bottom: 2px solid #dddddd; 
+    padding-bottom: 20px;
+    
+
 
 }
 
-.nav{
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    color: #777777;
-    float: right;
-}
 
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
-    background-color: #ffffff;
-    border-width: 1px;
-    border-color: #dddddd;
-    border-style: solid;
-    width: 960px;
+    background-image: url("assets/images/wavy-dots.png");
+    background-repeat: repeat;
+    width: 100%;
+    
+    
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
-    background-color: #ffffff;
-    border-color: #dddddd;
+    
+    float: left;
+    max-width: 50%;
 }
 
+.image{
+    float: left;
+    margin: 0px 20px 0px 0px;
+}
 
