--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,14 +25,17 @@ H1 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #777777;
     text-align: center;
-    margin-top: 10px;
     padding: 0;
 
 }
 
+ul{
+    margin: 0px;
+    
+}
 .nav li{
     display: inline-block;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
 }
 
 .nav a{
@@ -43,7 +46,7 @@ H1 {
 
 .wrapper{
     margin: 30px 250px;
-    max-width: 50%;
+    width: 960px;
     padding-right: 10px;
     padding-left: 10px;
     border: 1px solid gray;
@@ -56,6 +59,7 @@ H1 {
 H2{
     
     color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
     border-bottom: 2px solid #dddddd; 
     padding-bottom: 20px;
     
@@ -67,21 +71,99 @@ H2{
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
-    background-image: url("assets/images/wavy-dots.png");
+    background-image: url("../images/vichy.png");
     background-repeat: repeat;
     width: 100%;
+    margin: 0px;
     
     
 }
+
+.about{
+    
+    margin-top: 30px;
+}
+
 
 p {
     
-    float: left;
-    max-width: 50%;
+    font-size: 16px;   
 }
 
 .image{
-    float: left;
-    margin: 0px 20px 0px 0px;
+    float:left;
+    margin: 10px;
+    
+
+}
+
+
+
+footer {
+    background-color: #666666;
+    color: #777777;
+    border-top: solid 5px #4aaaa5;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    height:40px;
+    
+}
+
+form{
+    line-height: 27px;
+    width: 100%;
+}
+
+button{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.projects{
+    display: flex;
+    justify-content: space-around;
+    align-content: flex-start;
+    margin-bottom: 20px;
+}
+
+.title-1{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    text-align: center;
+    height:20px;
+    width: 150px;
+}
+
+.title-2{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+.title-3{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+.title-4{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+.title-5{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
