--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,20 +98,6 @@ p {
 }
 
 
-
-footer {
-    background-color: #666666;
-    color: #777777;
-    border-top: solid 5px #4aaaa5;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: center;
-    position: absolute;
-    bottom:0;
-    width: 100%;
-    height:40px;
-    
-}
-
 form{
     line-height: 27px;
     width: 100%;
@@ -126,9 +112,28 @@ button{
 }
 
 .projects{
-    display: flex;
-    justify-content: space-around;
-    align-content: flex-start;
+    display: inline-block;
+    margin: 20px;
+    padding: 20px;
+    padding-inline-start: 20px;
+    width:60%;
+}
+
+
+.project-1{
+    margin: 0px 30px 40px 0px;
+}
+
+.project-2{
+    margin: 0px 0px 40px 0px;
+}
+.project-3{
+    margin: 0px 30px 40px 0px;
+}
+.project-4{
+    margin: 0px 0px 40px 0px;
+}
+.project-5{
     margin-bottom: 20px;
 }
 
