--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+*{
+    box-sizing: border-box;
+    
+}
+
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+    background-image: url("../images/vichy.png");
+    background-repeat: repeat;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+
+}
+
 header{
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff;
@@ -43,17 +60,16 @@ ul{
     text-decoration: none;
 }
 
-
 .wrapper{
     margin: 30px 250px;
     width: 960px;
+    height: auto;
     padding-right: 10px;
     padding-left: 10px;
     border: 1px solid gray;
     background-color: #ffffff;
-    clear: both;
-    overflow: auto;
-
+    clear:both;
+    overflow: hidden;
 }
 
 H2{
@@ -61,22 +77,7 @@ H2{
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
     border-bottom: 2px solid #dddddd; 
-    padding-bottom: 20px;
-    
-
-
-}
-
-
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
-    background-image: url("../images/vichy.png");
-    background-repeat: repeat;
-    width: 100%;
-    margin: 0px;
-    
-    
+    padding-bottom: 20px;   
 }
 
 .about{
@@ -92,9 +93,7 @@ p {
 
 .image{
     float:left;
-    margin: 10px;
-    
-
+    margin: 10px;   
 }
 
 
@@ -111,7 +110,7 @@ button{
     margin-bottom: 10px;
 }
 
-.projects{
+projects{
     display: inline-block;
     margin: 20px;
     padding: 20px;
@@ -134,41 +133,56 @@ button{
     margin: 0px 0px 40px 0px;
 }
 .project-5{
-    margin-bottom: 20px;
+   margin-bottom: 20px;
 }
 
-.title-1{
+.title{
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 20px;
     font-family: 'Georgia', Times, Times New Roman, serif;
     text-align: center;
+    font-size:12px;
     height:20px;
-    width: 150px;
+    width: 200px;
+    position: absolute;
 }
 
-.title-2{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+.title-1{
+    top: 350px;
+    left: 261px;
+  }
+  
+  .title-2{
+      top: 350px;
+      left: 495px; 
+  }
+  
+  .title-3{
+      top: 594px;
+      left: 261px;
+  }
+  
+  .title-4{
+      top: 594px;
+      left: 495px;
+  }
+  
+  .title-5{
+      top: 839px;
+      left: 261px;
+  }
+
+footer {
+    background-color: #666666;
+    color: #777777;
+    border-top: solid 5px #4aaaa5;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: 0 center;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+    height:40px;  
 }
-.title-3{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-.title-4{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-.title-5{
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
+
 
