--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ footer {
     color: #777777;
     border-top: solid 5px #4aaaa5;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: 0 center;
+    text-align: center;
     position: fixed;
     bottom:0;
     width: 100%;
